# anki-decks_italian-ipa

./: .bumpversion.cfg  README.md  build-deck.sh  pyproject.toml
deck/: 0  1  101  103  104  105  106  107  108  109  11  110  111  112  113  114  116  117  118  120  121  122  123  125  126  127  128  13  130  133  136  138  139  141  143  144  147  149  15  150  (+73 more)
recipes/: anki_to_source.yaml  source_to_anki.yaml
src/data/: IPA consonant.csv  IPA diphthongs.csv  IPA vowel.csv
src/headers/: header1.yaml
src/note_models/IPA consonant/: IPA consonant.yaml
src/note_models/IPA diphthongs/: Forward.html  IPA diphthongs.yaml  Reverse.html
src/note_models/IPA vowel/: Forward.html  IPA vowel.yaml
