[tool.poetry]
name = "italian_ipa"
version = "1.3"
description = "Anki deck with IPA symbols for phonemes and phones of the Italian language"
authors = ["Simone Gaiarin <simgunz@gmail.com>"]
license = "CC BY-NC-SA"

[tool.poetry.dependencies]
python = "^3.9"
Brain-Brew = "^0.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
